<resources>
    <string name="app_name">CampingMaster</string>
    <string name="getId">아이디</string>
    <string name="getPW">비밀번호</string>
    <string name="findID">아이디찾기</string>
    <string name="findPW">비밀번호찾기</string>
    <string name="singUp">회원가입</string>
    <string name="joinId">아이디 입력</string>
    <string name="joinPw">비밀번호 입력</string>
    <string name="joinEmail">이메일 입력</string>
    <string name="login">로그인</string>

    <!-- Category theme. -->
    <string name="cat_normal">일반야영장</string>
    <string name="cat_car">자동차야영</string>
    <string name="cat_glamping">글램핑</string>
    <string name="cat_pool">물놀이장</string>
    <string name="cat_caravan">카라반</string>
    <string name="cat_animal">애견동반</string>
    <string name="cat_seoul">서울권</string>

    <!--keyword-->
    <string name="key_sunset">#일몰명소</string>
    <string name="key_sunrise">#일몰명소</string>
    <string name="key_bbq">#바베큐</string>
    <string name="key_gamsung">#감성캠핑</string>
    <string name="key_spring">#봄</string>
    <string name="key_summer">#여름</string>
    <string name="key_fall">#가을</string>
    <string name="key_winter">#겨울</string>
    <string name="key_play">#놀이시설</string>
    <string name="key_baby">#애견동반</string>
    <string name="key_tour">#관광지주변</string>
    <string name="key_beach">#해변</string>
    <string name="key_deck">#데크</string>
    <string name="key_fish">#낚시</string>

    <!--category icon size-->
    <dimen name="icon_width">50dp</dimen>
    <dimen name="icon_height">50dp</dimen>

    <!--tab layout-->
    <string name="tab_home">홈</string>
    <string name="tab_search">검색</string>
    <string name="tab_chat">채팅</string>
    <string name="tab_info">내정보</string>

</resources>