<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/menu_tab"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/tab_home"
            android:icon="@drawable/ic_tab_home"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_search"
            android:icon="@drawable/ic_tab_search"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_chat"
            android:icon="@drawable/ic_tab_chat"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_info"
            android:icon="@drawable/ic_tab_info"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menu_tab"/>

</androidx.constraintlayout.widget.ConstraintLayout>